--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -20,6 +20,29 @@
         <a class="nav-link" href="/login">Login</a>
     </button>
 </nav>
-<p>HOME PAGE</p>
+<div align="center">
+    <h1>Games</h1>
+    <a href="/new">Enter New Sale</a>
+    <br/><br/>
+    <table border="1" cellpadding="10">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Genre</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="game : ${list}">
+            <td th:text="${game.name}">Name</td>
+            <td th:text="${game.genre}">Genre</td>
+            <td th:text="${game.console}">Name</td>
+            <td th:text="${game.rDate}">Genre</td>
+            <td th:text="${game.dev}">Name</td>
+            <td th:text="${game.pub}">Genre</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
+
