--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -33,9 +33,9 @@
         </thead>
         <tbody>
         <tr th:each="game : ${list}">
-            <td th:text="${game.name}">Name</td>
+            <td th:text="${game.gameName}">Name</td>
             <td th:text="${game.genre}">Genre</td>
-            <td th:text="${game.console}">Name</td>
+            <td th:text="${game.score}">Name</td>
             <td th:text="${game.rDate}">Genre</td>
             <td th:text="${game.dev}">Name</td>
             <td th:text="${game.pub}">Genre</td>
