--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -36,10 +36,10 @@
         </thead>
         <tbody>
         <tr th:each="game : ${games}">
-            <td th:text="${game.name}">Name</td>
+            <td th:text="${game.gameName}">Name</td>
             <td th:text="${game.genre}">Genre</td>
-            <td th:text="${game.console}">Name</td>
-            <td th:text="${game.rDate}">Genre</td>
+            <td th:text="${game.score}">Score</td>
+            <td th:text="${game.rDate}">Date</td>
             <td th:text="${game.dev}">Name</td>
             <td th:text="${game.pub}">Genre</td>
         </tr>
