Added Column names to score, rDate, PubId, and DevId

--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -30,6 +30,10 @@
         <tr>
             <th>Name</th>
             <th>Genre</th>
+            <th>User Score</th>
+            <th>Release Date</th>
+            <th>Developer Id</th>
+            <th>Publisher Id</th>
         </tr>
         </thead>
         <tbody>
