--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -20,28 +20,35 @@
         <a class="nav-link" href="/login">Login</a>
     </button>
 </nav>
-<div align="center">
-    <h1>Games</h1>
-    <a href="/new">Enter New Sale</a>
-    <br/><br/>
-    <table border="1" cellpadding="10">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Genre</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="game : ${list}">
-            <td th:text="${game.gameName}">Name</td>
-            <td th:text="${game.genre}">Genre</td>
-            <td th:text="${game.score}">Name</td>
-            <td th:text="${game.rDate}">Genre</td>
-            <td th:text="${game.dev}">Name</td>
-            <td th:text="${game.pub}">Genre</td>
-        </tr>
-        </tbody>
-    </table>
+
+    <div align="center">
+        <h1>Games</h1>
+        <a href="/new">Recommended Games</a>
+        <br/><br/>
+        <table border="1" cellpadding="10">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Genre</th>
+                <th>User Score</th>
+                <th>Release Date</th>
+                <th>Developer Id</th>
+                <th>Publisher Id</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="game : ${games}">
+                <td th:text="${game.gameName}">Name</td>
+                <td th:text="${game.genre_genreId}">Genre</td>
+                <td th:text="${game.score}">Score</td>
+                <td th:text="${game.rDate}">Date</td>
+                <td th:text="${game.developer_developerId}">Name</td>
+                <td th:text="${game.publisher_publisherId}">Genre</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <div>
 </div>
 </body>
 </html>
