--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -15,7 +15,17 @@
 
 </head>
 <body>
-<nav class="nav justify-content-end">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/search}">Search</a>
+            </li>
+        </ul>
+    </div>
     <button type="button" class="btn btn-light">
         <a class="nav-link" href="/login">Login</a>
     </button>
@@ -23,7 +33,6 @@
 
     <div align="center">
         <h1>Games</h1>
-        <a href="/new">Recommended Games</a>
         <br/><br/>
         <table border="1" cellpadding="10">
             <thead>
@@ -42,14 +51,11 @@
                 <td th:text="${game.genre_genreId}">Genre</td>
                 <td th:text="${game.score}">Score</td>
                 <td th:text="${game.rDate}">Date</td>
-                <td th:text="${game.developer_developerId}">Name</td>
-                <td th:text="${game.publisher_publisherId}">Genre</td>
             </tr>
             </tbody>
         </table>
+    </div>
 
-        <div>
-</div>
 </body>
 </html>
 
