--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,9 +15,19 @@
 
 </head>
 <body>
-<nav class="nav justify-content-end">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/search}">Search</a>
+            </li>
+        </ul>
+    </div>
     <button type="button" class="btn btn-light">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" th:href="@{/login}">Login</a>
     </button>
 </nav>
 <div class="d-flex justify-content-center">
